app/javascript/stylesheets/application.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

.results b {
  @apply bg-indigo-200;
  @apply px-1;
  @apply font-medium;
}

.results th.type {
  // TOOD: check why this width doesn't apply like min-width does
  width: 90px;
}

.results th.cast {
  width: 80px;
}

.results th.director {
  width: 100px;
}

.results th.country {
  width: 100px;
}

.results th.date_added {
  width: 125px;
}

.results th.listed_in {
  width: 100px;
}

.results th.rating {
  width: 90px;
}

.results th.duration {
  width: 110px;
}

.results tr:hover b {
  @apply bg-indigo-500;
  @apply text-indigo-100;
}

h1 {
  @apply py-4;
  @apply text-4xl;
}

.container {
  @apply px-4;
  @apply pb-4;
}

a {
  @apply font-semibold;
  @apply text-indigo-500;

  &:hover {
    @apply underline;
  }
}

table > tbody {
  tr:hover {
    @apply bg-indigo-200;
    @apply text-gray-900;
  }

  td {
    @apply px-2;
    @apply py-1;
    @apply truncate;
    @apply overflow-ellipsis;
    @apply max-w-xs;
  }
}

// Source: https://codepo8.github.io/css-fork-on-github-ribbon
#github-banner a {
  background: #000;
  color: #fff;
  text-decoration: none;
  font-family: arial, sans-serif;
  text-align: center;
  font-weight: bold;
  padding: 5px 40px;
  font-size: 1rem;
  line-height: 2rem;
  position: relative;
  transition: 0.5s;
}
#github-banner a:hover {
  background: #c11;
  color: #fff;
}
#github-banner a::before,
#github-banner a::after {
  content: "";
  width: 100%;
  display: block;
  position: absolute;
  top: 1px;
  left: 0;
  height: 1px;
  background: #fff;
}
#github-banner a::after {
  bottom: 1px;
  top: auto;
}
@media screen and (min-width: 800px) {
  #github-banner {
    position: fixed;
    display: block;
    top: 0;
    right: 0;
    width: 200px;
    overflow: hidden;
    height: 200px;
    z-index: 9999;
  }
  #github-banner a {
    width: 200px;
    position: absolute;
    top: 33px;
    right: -46px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
  }
}

